tests/error/result_errors/state_result_multiple_arrays.err
Error: Too many array arguments (at $FILE:14:3)
   | 
12 | @no_type_check
13 | def main(qs: array[qubit, 3], rs: array[qubit, 4]) -> None:
14 |    state_result("foo", qs, rs)
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Only one array argument is allowed

Guppy compilation failed due to 1 previous error
